# BoardGames

./: .gitignore  BoardGames - Makefile.rar  BoardGames.rar  CMakeLists.txt  Doxyfile  Makefile  README.md  compile&run.bat  compile&run.sh  tests.bat  tests.sh
include/: Board.hpp  Game.hpp  GameManager.hpp  Lig4.hpp  Piece.hpp  Reversi.hpp  SaveManager.hpp  TicTacToe.hpp
include/UI/: BillboardComponent.hpp  GameSelectionScene.hpp  ImageContainer.hpp  InputContainer.cpp  InputContainer.hpp  Lig4Scene.hpp  LoginScene.hpp  MenuScene.hpp  ParallaxComponent.hpp  ReversiScene.hpp  Scene.hpp  SceneManager.hpp  SignInScene.hpp  SignUpScene.hpp  TextComponent.hpp  TicTacToeScene.hpp
src/: Board.cpp  Game.cpp  GameManager.cpp  Lig4.cpp  Piece.cpp  Reversi.cpp  SaveManager.cpp  TicTacToe.cpp  main.cpp
src/UI/: GameSelectionScene.cpp  Lig4Scene.cpp  LoginScene.cpp  MenuScene.cpp  ReversiScene.cpp  SceneManager.cpp  SignInScene.cpp  SignUpScene.cpp  TicTacToeScene.cpp
tests/: TesteTicTacToe  test_db.csv  teste_cadastro.cpp  teste_jogos.cpp  tests.cpp
